Fixed: Default navbar on mobile (v0.0.3)

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ Accent 3: #FFA05A
 
 @import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
 @import url('https://fonts.googleapis.com/css2?family=Spline+Sans+Mono:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -100,7 +101,7 @@ body {
         display: block;
     }
 
-    #navbar-links {
+    /* #navbar-links {
         position: absolute;
         top: 80px;
         left: 0;
@@ -111,7 +112,7 @@ body {
         flex-direction: column;
         align-items: center;
         text-align: center;
-    }
+    } */
 
     #navbar-links li {
         padding: 10px;
@@ -123,7 +124,11 @@ body {
     }
 
     #navbar-links li a:hover {
-        color: #5A5AFF;
+        color: #0D0D0D;
+        background-color: #ffffff;
+        transition: all 0.25s ease-in-out;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        padding: 12.5px;
     }
 
     h1.typewriter-text {
@@ -140,6 +145,10 @@ body {
 
     .visual p {
         max-width: 95%;
+    }
+
+    .heading {
+        width: 90%;
     }
 }
 
@@ -297,4 +306,9 @@ span {
 a {
     text-decoration: none;
     color: inherit;
+}
+
+.about-heading,
+.project-title {
+    font-family: "Lato", sans-serif;
 }
